--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,33 @@ on:
             - main
 
 jobs:
-    log-message:
+    deploy:
         runs-on: ubuntu-latest
         steps:
-            - name: Print message
-              run: echo "Workflow ejecutado"
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Setup node
+              uses: actions/setup-node@v6
+              with: 
+                node-version: '22'
+                cache: npm
+
+            - name: Install dependencies
+              run: npm ci
+
+            - name: Build angular
+              run: npm run build
+
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v4
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+                aws-region: us-east-1
+
+            - name: Deploy to S3
+              run: aws s3 sync dist/EXAMPLE_APP/browser s3://amzn-static-angular \
+                    --delete \ 
+                    --exclude ".*"
